# comp

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  WHY.md  _config.yml  debug_index_parse.py  debug_lark_tree.py  debug_mixed_struct.py  debug_spread_nested.py  debug_struct.py  debug_tags.py  debug_value.py  pyproject.toml  test_expr_fix.py  test_import.comp  test_map.comp  test_shape_grammar.py  test_spread_debug.py  test_while.comp
.claude/: instructions.md  prompts.md  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: pages.yml
design/: bridge.md  builtin-types-operators-units-tags.md  comp-style.md  fail.md  failure.md  filesystem.md  flowcontrol.md  function.md  functions-shapes-blocks-pure.md  functions.md  language.md  loop.md  module.md  modules-imports-namespaces-entry.md  modules.md  namespace.md  overview.md  path.md  pipeline.md  pipelines.md  raw-args-capture.md  resource.md  resources-transactions.md  resources.md  roadmap.md  security.md  shape.md  shapes.md  store.md  struct.md  structure.md  structures.md  syntax.md  tag.md  tags.md  trail.md  type.md  types.md  unit.md
design/incoming/: module.md  scope.md  struct.md  values.md
docs/: CLI_USAGE.md  branch-history.comp  comp-style.md  filesystem.md  function.md  path-store.md  pure-cache.md  python-style.md  store.md  struct.md  syntax.md  tasks.md  type.md
docs/ancient/: codexamples.md  examples-v7.md  fastapi-examples.md  index.md  nim-examples.md  playground1.md  playground2.md  struct-in-struct-out.md  structs-and-calls.md  subclassey-stuff.md  threejs-example.md
docs/early/: 04-design_decisions.md  05-design-decisions.md  06-language_spec.md  07-language-spec.md  11-units-constblocks-import.md  12-transact-resource-security.md  13-pure-blocks-resource.md  14-imports.md  15-tags.md  16-stringformat.md  17-filesystem-resources.md  18-tag-dispatch.md  19-valve-conditionals.md  20-module-management.md  21-block-syntax.md  22-morph-namespaces.md  24-nil-any-morph.md  25-units.md  26-branches.md  27-seed-format.md  28-wrench.md  cart.comp  cloudflaire-ai.comp  design_decisions.md  helloworld.comp  io-uring.comp  language_spec.md  lockless.comp  nushell.comp  project_knowledge.md  resouce.comp  rio-todo.comp  riotodo.comp  syntax_comparison.md  tree.comp  wordcount.comp
docs/engine/: tag.md  (+4 more)
examples/: README.md  STRUCTURE.md  advent.comp  cart.comp  cloudflaire-ai.comp  cloudflare-ai.comp  cloudflare.comp  complete_module.comp  github.comp  greet.comp  hello.comp  helloworld.cmp  helloworld.comp  io-uring.comp  lockless.comp  mayatool.comp  nushell.comp  pipeline.comp  pygame.comp  resouce.comp  rio-todo.comp  shortener.comp  teamzones.comp  test_dep.comp  test_parser.comp  tree.comp  tres.comp  wordcount.comp
lib/: point.comp
specs/: core-spec.md
stdlib/: branch.comp  callout.comp  default.comp  fs.comp  limit.comp  loop.comp  nativefs.comp  num.comp  ramfs.comp  shelf.comp  sqlite.comp  struct.comp  test.comp  test_nested.comp  text.comp  time.comp  unit.comp  uri.comp
tasks/: 01-03-strings-tokens.md  01-04-reference-literals.md  01-05-structures.md  01-06-mathematical-operators.md  01-06-operators.md  01-07-advanced-operators.md  01-08-scopes-assignments.md  01-08-tag-values.md  01-09-pipeline-operations.md  01-10-parse-cleanup.md  01-11-parse-function-split.md  01-11-tag-definitions.md  01-12-shape-definitions.md  01-13-function-definitions.md  01-14-tags-complete.md  01-15-bang-operators.md  01-project-setup.md  02-01-runtime-values.md  02-basic-literals.md  02-number-literals.md  03-tag-literals.md  04-reference-literals.md  05-structures.md  CLEANUP-2025-10.md  README.md  phase0-setup.md
tests/: README.md  comptest.py  conftest.py  ct_builtin.comp  ct_fields.comp  ct_functions.comp  ct_handle.comp  ct_loop.comp  ct_num.comp  ct_python.comp  ct_text.comp  test-branch.comp  test-limit.comp  test-loop.comp  test-num.comp  test-text.comp  test-unit.comp  test_advanced_operators.py  test_assign_ops.py  test_bare_index.py  test_block.py  test_block_invocation.py  test_block_morphing.py  test_build_tags.py  test_builtin.py  test_builtins.py  test_cli.py  test_comp_files.py  test_compute_fields.py  test_computed_index.py  test_debug_spread.py  test_drop_dispatch.py  test_engine.py  test_fallback.py  test_fields.py  test_function_dispatch.py  test_function_masking.py  test_functions.py  test_handle_drop_block.py  test_handle_grab.py  (+73 more)
tools/: parse_comp.py  parsecomp.py  scan_module.py
vscode/: README.md  comp-language-support-0.1.0.vsix  comp-language-support-0.2.0.vsix  comp-language-support-0.3.0.vsix  comp-language-support-0.4.0.vsix  comp-language-support-0.5.0.vsix  comp-language-support-0.6.0.vsix  comp-language-support-0.7.0.vsix  comp-language-support-0.8.0.vsix  language-configuration.json  package-lock.json  package.json
(+209 files in other folders)
