[project]
name = "comp"
version = "0.1.0"
description = "Comp Programming Language"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Shinners", email = "pete@shinners.org" }
]
keywords = ["language", "interpreter", "functional", "parser"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "lark>=1.1.0",
]

[project.urls]
Repository = "https://github.com/PeterShinners/comp"

[project.scripts]
comp = "comp.cli:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/comp"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
pythonPlatform = "All"

# Type checking settings
typeCheckingMode = "basic"  # "off" | "basic" | "standard" | "strict"

# Report settings (set to "warning" or "error" to enable, "none" to disable)
reportMissingImports = "warning"
reportMissingTypeStubs = "none"  # Don't complain about missing stubs for third-party libraries
reportUnusedImport = "none"  # Allow imports used in docstrings
reportUnusedVariable = "warning"
reportUnusedFunction = "none"  # Allow helper functions that may not be used yet
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportGeneralTypeIssues = "warning"

# Disable overly strict checks for dynamic code
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
