[project]
name = "comp"
version = "0.3.0"
description = "Comp Programming Language"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Shinners", email = "pete@shinners.org" }
]
keywords = ["language", "interpreter", "functional", "parser"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "cbor2>=5.7.1",
    "lark>=1.1.0",
]

[project.urls]
Repository = "https://github.com/PeterShinners/comp"

# [project.scripts]
# comp = "comp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/comp"]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
