[project]
name = "comp"
version = "0.4.0"
description = "Comp Programming Language"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Shinners", email = "pete@shinners.org" }
]
keywords = ["language", "interpreter", "functional", "parser"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "cbor2>=5.7.1",
    "lark>=1.1.0",
]

[project.urls]
Repository = "https://github.com/PeterShinners/comp"

# [project.scripts]
# comp = "comp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/comp"]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["src/comp/run"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F403",   # import *, still used in __init__ and thats good
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
